Product view changes

--- a/eliteshoppy-web/src/main/resources/templates/fragments/head.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/head.html
@@ -14,6 +14,7 @@
 	</script>
 	
 	<link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css" media="all" />
+	<link th:href="@{/css/flexslider.css}" rel="stylesheet" type="text/css" media="screen" />
 	<link th:href="@{/css/font-awesome.css}" rel="stylesheet" />
 	<link th:href="@{css/jquery-ui.css}" rel="stylesheet" type="text/css">
 	<link th:href="@{/css/easy-responsive-tabs.css}" rel='stylesheet' type='text/css' />
