--- a/eliteshoppy-web/src/main/resources/templates/fragments/new-arrivals.html
+++ b/eliteshoppy-web/src/main/resources/templates/fragments/new-arrivals.html
@@ -28,7 +28,7 @@
 							</div>
 							<div class="item-info-product ">
 								<h4>
-									<a th:href="@{single.html}">Formal Blue Shirt</a>
+									<a th:href="@{/single.html}">Formal Blue Shirt</a>
 								</h4>
 								<div class="info-product-price">
 									<span class="item_price">$45.99</span>
