--- a/eliteshoppy-web/src/main/resources/templates/single.html
+++ b/eliteshoppy-web/src/main/resources/templates/single.html
@@ -161,16 +161,24 @@
 								<div class="single_page_agile_its_w3ls">
 									<div class="bootstrap-tab-text-grids">
 										<div class="bootstrap-tab-text-grid">
-											<div class="bootstrap-tab-text-grid-right">
-												<ul>
-													<li><a href="javascript:void(0)">Admin</a></li>
-												</ul>
-												<p>Lorem ipsum dolor sit amet, consectetur adipisicing
+											<ul id="reviewContainer">
+												<li>
+													<a href="javascript:void(0)">Admin</a>
+													<p>Lorem ipsum dolor sit amet, consectetur adipisicing
 													elPellentesque vehicula augue eget.Ut enim ad minima
 													veniam, quis nostrum exercitationem ullam corporis suscipit
 													laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
 													autem vel eum iure reprehenderit.</p>
-											</div>
+												</li>
+												<li>
+													<a href="javascript:void(0)">Admin</a>
+													<p>Lorem ipsum dolor sit amet, consectetur adipisicing
+													elPellentesque vehicula augue eget.Ut enim ad minima
+													veniam, quis nostrum exercitationem ullam corporis suscipit
+													laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
+													autem vel eum iure reprehenderit.</p>
+												</li>
+											</ul>
 											<div class="clearfix"></div>
 										</div>
 										<div class="add-review">
